[metadata]
name = ddb2es_paxcredit
version = 0.0.1
author = Ilya Ibulaev
author_email = i.ibulaev@sloboda-studio.com
description = This is a package to read dynamodb streams, write them to elasticsearch and search ES data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pax-Credit/pc_ddb2es
project_urls =
    Bug Tracker = https://github.com/Pax-Credit/pc_ddb2es/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests-aws4auth==1.1.1
    elasticsearch==7.13.1
    python-dateutil==2.8.1

[options.packages.find]
where = src